[ADD] adding template for Viveum and its CSS devided to stay PCI conform, viveum_template.html is loaded from VIVEUM directly this is only the source copy of the file

--- a/addons/bird_config/static/src/html/viveum_template.html
+++ b/addons/bird_config/static/src/html/viveum_template.html
@@ -3,7 +3,7 @@
   <HEAD>
     <META HTTP-EQUIV="Content-Type" CONTENT="text/html;CHARSET=UTF-8">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-      <link rel="stylesheet" href="https://clic.datadialog.net/clic_config/static/src/html/viveum.css">
+      <link rel="stylesheet" href="https://bird.datadialog.net/bird_config/static/src/html/viveum.css">
       <TITLE>BIRD &quot;standard mode&quot; Birdlife Spenden Zahlseite</TITLE>
 
     </HEAD>
@@ -62,7 +62,7 @@
                   </div>
                   <div class="lightgreyBG cachet">
                     <p>
-                      Jede Spende hilft uns benachteiligte Menschen zu Unterstützen Vielen Dank für Ihr Vertrauen.
+                      Jede Spende hilft uns benachteiligte Menschen zu Unterst&uuml;tzen Vielen Dank f&uuml;r Ihr Vertrauen.
                     </p>
                   </div>
                 </div>
