[ADD] changed text inside viveum template and uploaded to viveum portal, changed donation button size behavior

--- a/addons/bird_config/static/src/html/viveum_template.html
+++ b/addons/bird_config/static/src/html/viveum_template.html
@@ -62,7 +62,7 @@
                   </div>
                   <div class="lightgreyBG cachet">
                     <p>
-                      Jede Spende hilft uns benachteiligte Menschen zu Unterst&uuml;tzen Vielen Dank f&uuml;r Ihr Vertrauen.
+                      Mit Ihrem Beitrag unterst&uuml;tzen Sie unsere Projekte zum Schutz unserer Vogelwelt und Ihrer Lebensr&auml;ume.
                     </p>
                   </div>
                 </div>
